# kstdcpp

./: .gitignore  .kstdcpp.mod.cmd  Makefile  README.md  kstdcpp.mod  meson.build
compilation_testing/: Makefile  kmalloc.c  kmalloc.h  test.cpp
include/: algorithm.hpp  memory.hpp  new.hpp  optional.hpp  string.hpp  vector.hpp
include/wrappers/: cstring.h  kmem.h
src/: kmem.c  new.cpp
testing/complex_kmod/: Makefile  complex_kmod.c  helper.cpp  helper.h  simple_kmod.c
testing/inital_compile/: Makefile  kmalloc.h
testing/simple_kmod/: .modules.order.cmd  .simple_kmod.mod.cmd  .simple_kmod.o.cmd  .simple_kmod.o.d  Makefile  helper.cpp  helper.h  module_meta.h  modules.order  simple_kmod.c  simple_kmod.mod
testing/simple_kmod_standard/: Makefile  helper.cpp  simple_kmod.c
testing/string_kmod/: Makefile  helper.cpp  helper.h  string_kmod.c
